<resources>
    <string name="app_name">ClientOneAmFam</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="description">Description: </string>
    <string name="cost">Cost: </string>
    <string name="address">Address: </string>
    <string name="city">City: </string>
    <string name="state">State: </string>
    <string name="zip">Zip: </string>
    <string name="imageDescription">Policy Image</string>
    <string name="editPolicy">Edit Policy</string>
    <string name="deleteImage">Delete Image</string>
    <string name="comment">Enter Comments</string>
    <string name="uploads">Uploads</string>
    <string name="editCard">Edit Card</string>
    <string name="policy">Policy: </string>
    <string name="damages">Damages: </string>
    <string name="checkbox_1">Stay Logged In</string>
    <string name="checkbox_2">Remember Username</string>

    <string name="amfam_logo">AmFam Logo</string>

    <string name="my_agent">My Agent</string>
    <string name="find_an_agent">Find An Agent</string>
    <string name="my_policies">My Policies</string>
    <string name="my_claims">My Claims</string>
    <string name="settings">Settings</string>

    <string name="navneet">Navneet Reddy</string>

    <string-array name="drawerItems">
        <item>Home</item>
        <item>My Agent</item>
        <item>Find An Agent</item>
        <item>My Policies</item>
        <item>My Claims</item>
        <item>Settings</item>
    </string-array>

    <string name="meet_the_interns">Meet the Interns</string>

    <string-array name="intern_names">
        <item>Evan Feller</item>
        <item>Levi Lavender</item>
        <item>Navneet Reddy</item>
        <item>James Ziglinski</item>
    </string-array>

    <string-array name="states">
        <item>Select a State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>

    </string-array>

    <string name="title_activity_login">Login</string>



    <string name="register_button_text">Register New User</string>
    <string name="policies">Policies</string>
    <string name="agent">Agent</string>
    <string name="appointments">Appointments</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="policy_num_title">Policy Number:</string>
    <string name="policy_type_title">Type of Policy:</string>
    <string name="client_id_title">Client ID:</string>
    <string name="address_title">Address:</string>
    <string name="add">Add</string>
    <string name="meeting_title">Meeting:</string>
    <string name="attendees_title">Attendees:</string>
    <string name="location_title">Location:</string>
    <string name="start_time_title">Start Time:</string>
    <string name="end_time_title">End Time:</string>
    <string name="end_date_title">End Date:</string>
    <string name="start_date_title">Start Date:</string>
    <string name="comments_title">Comments:</string>
    <string name="username_title">Username:</string>
    <string name="password_title">Password:</string>
    <string name="name_title">Name:</string>
    <string name="email_title">Email:</string>
    <string name="phone_number_title">Phone Number:</string>
    <string name="logout">Logout</string>
    <string name="entryError">You must enter a value!</string>


    <string name="email_support">Email Support</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone_number">Phone Number</string>
    <string name="comments">Comments</string>
    <string name="save_changes">Save Changes</string>
    <string name="create_client">Create Client</string>
    <string name="password_title_2">Password (Again):</string>
    <string name="version">version</string>
    <string name="amfam_team_paul">BST Omni CRM/APEX Team</string>
    <string name="job_title">Application Development Intern</string>
    <string name="email_navneet">Email Navneet</string>
    <string name="linkedin_navneet">linkedin.com/in/navneetreddy</string>
    <string name="github_navneet">github.com/navneetreddy</string>
    <string name="picture_navneet">Navneet\'s Picture</string>
    <string name="about_navneet">About Navneet</string>
    <string name="expanded_image">Expanded Image</string>
    <string name="policy_claim_card_image">Policy/Claim card image</string>

    <string name="EvanFeller">Evan Feller</string>
    <string name="github_evan">github.com/fellere</string>
    <string name="linkedin_evan">linkedin.com/in/evfeller</string>
    <string name="email_evan">Email Evan</string>
    <string name="about_evan_one">I am a second year intern at American Family Insurance this summer, and in my last year of schooling at the University of Wisconsin - Platteville majoring in Software Engineering with a minor in Mathematics.</string>
    <string name="about_evan_two">Languages &amp; Skills : C++, Java, Android, UML Diagrams, Project Management Experience, Leadership, People Skills/Public Speaking, Object-Oriented Analysis and Design, Software Quality Assurance Techniques, Real Time Embedded Systems in both C and Assembly Languages, Microprocessor programming, SQL Databases, Ruby, ADA, Javascript, AngularJS, JQuery, HTML/CSS, Visual Basic</string>
    
    
    <string name="email_james">Email James</string>
    

    <string name="about_james">****DONT WORRY GUYS, ILL CHANGE THE PIC BEFORE THE PRESENTATOIN**** My most prominent objective is respect. I believe that in order for a team to work properly, each team member must have a mutual respect for their co-workers, as well as superiors and subordinates. A team that has full trust and respect amongst themselves can overcome most barriers and obstacles, allowing them to accomplish great things.</string>
    <string name="connect_with_james">Connect with James:</string>
    <string name="james_ziglinski">James Ziglinski</string>
    <string name="email_colon">Email:</string>
    <string name="phone_colon">Phone:</string>
    <string name="address_colon">Address:</string>
    <string name="username_colon">Username:</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intern_name">Intern Name</string>
    <string name="intern_picture">Intern Picture</string>
    <string name="interns_title">2015 Summer Interns</string>
</resources>