<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cloudy_white"
    android:orientation="vertical"
    tools:context="com.example.jaz020.clientoneamfam.RegisterFragment"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:padding="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/username_entry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />

                <EditText
                    android:id="@+id/password_entry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/password_reentry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reenter_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/address_street"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Address" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/middle_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                //TODO use weights
                <EditText
                    android:id="@+id/address_city"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="City" />

                <Spinner
                    android:id="@+id/state_spinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/zip_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/zipcode"
                    android:inputType="number"
                    android:maxLength="5"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/name_entry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/phone_entry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="14" />

                <EditText
                    android:id="@+id/email_entry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <Spinner
                    android:id="@+id/agent_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agent"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button_text"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
