<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_interns"
    tools:context="com.example.jaz020.clientoneamfam.MeetNavneetFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="4"
            android:id="@+id/picture"
            android:src="@drawable/navneet" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/navneet"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingTop="7dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/job_title"
                android:textSize="@dimen/text_size_interns" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/amfam_team_paul"
                android:textSize="@dimen/text_size_interns" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingTop="12dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/linkedin_navneet"
                android:autoLink="web"
                android:textSize="@dimen/text_size_interns" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/github_navneet"
                android:autoLink="web"
                android:textSize="@dimen/text_size_interns" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailNavneetButton"
            android:text="@string/email_navneet"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>