<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:outline="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    card_view:cardBackgroundColor="@color/cloudy_white"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/policy_claim_card_image"
                android:scaleType="centerCrop" />

            <com.example.jaz020.clientoneamfam.TextOutlineView
                android:id="@+id/cardDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold"
                outline:strokeColor="#ffffff"
                outline:strokeJoinStyle="miter"
                outline:strokeWidth="2px" />

            <ImageButton
                android:id="@+id/cardEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:background="#00ffffff"
                android:contentDescription="@string/editCard"
                android:src="@android:drawable/ic_menu_edit" />

        </FrameLayout>

        <TextView
            android:id="@+id/cardCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/cost"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</android.support.v7.widget.CardView>