<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_clouds"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jaz020.clientoneamfam.Settings"
    >

    <LinearLayout
        android:padding="@dimen/padding_interns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_image_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:cropToPadding="false"
                android:fitsSystemWindows="false"
                android:src="@drawable/amfam3" />

            <TextView
                android:id="@+id/version_text_view"
                style="@style/cloud_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/version" />
        </LinearLayout>


        <LinearLayout
            style="@style/cloud_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/title_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username_colon" />

                    <TextView
                        android:id="@+id/address_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address_colon" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/text_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/username_text_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/address_text_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/title_layout_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/phone_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_colon" />

                    <TextView
                        android:id="@+id/email_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_colon" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/text_layout_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/phone_text_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/email_text_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/logout_button"
            style="@style/cloud_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/logout" />

    </LinearLayout>
</ScrollView>
